--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="picture/IMG_patioChilling.jpg" alt="Joel sitting in the gazebo" >
         </section>
 
-        <!-- my work -->
+        <!-- my projects -->
         <section class="my-work" id="work" >
             <h2 class="section__title" >My Work</h2>
             <p class="section__subtitle" ></p>
@@ -89,6 +89,17 @@
                 
             </div>
         </section>
+
+        <!-- footer -->
+        <footer>
+            <a href="mailto:meyerjoel01@gmail.com" class="footer-link">meyerjoel01@gmail.com</a>
+            <ul class="social-list" >
+                <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/joel-meyer-b6a7a2b7/">LinkedIn</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://github.com/mr-joelM">GitHub</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://www.freecodecamp.org/mr-joel">freeCodeCamp</a></li>
+            </ul>
+        </footer>
 
     </body>
 </html>
