--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Joel Meyer Porfolio Site</title>
-        <link rel="stylesheet" ref="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha512-0S+nbAYis87iX26mmj/+fWt1MmaKCv80H+Mbo+Ne7ES4I6rxswpfnC6PxmLiw33Ywj2ghbtTw0FkLbMWqh4F7Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha512-0S+nbAYis87iX26mmj/+fWt1MmaKCv80H+Mbo+Ne7ES4I6rxswpfnC6PxmLiw33Ywj2ghbtTw0FkLbMWqh4F7Q==" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro|Source+Sans+Pro&display=swap">
+        <link rel="stylesheet" href="css/style.css" >
     </head>
     <body>
         <header>
@@ -31,13 +33,13 @@
                 Hi, I am <strong>Joel Meyer</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-            <img src="picture/IMG_joelM.jpg" alt="dude with sunnies and beard smiling on the top of a very small mountain" >
+            <img src="picture/IMG_joelM.jpg" alt="dude with sunnies and beard smiling on the top of a very small mountain" class="intro__img">
         </section>
 
-        <!-- My services -->
+        <!-- technologies -->
 
         <section class="my-services" id="services">
-            <h2 class="my-services__title section__title--services" >What i do</h2>
+            <h2 class="my-services__title section__title--services" >What I do</h2>
             <div class="services">
                 <div class="service">
                     <h3>Design + Development</h3>
@@ -53,16 +55,20 @@
                     <h3>Wordpress</h3>
                     <p>Nulla enim leo, tempus eget placerat nec, consectetur a lorem. Curabitur sed lacus eget orci bibendum congue et eget nunc. Integer feugiat pulvinar eleifend. Nam finibus sapien nisi, vel accumsan tellus mattis in. Donec non orci vitae dolor fermentum venenatis quis in mauris. Aliquam eu nibh vitae nisl vestibulum porttitor. Nullam vel quam nec nisi malesuada mollis. Maecenas ac nulla ullamcorper, luctus lorem et.</p>
                 </div> <!-- end of service -->
-            </div> <!-- end of services -->
+            </div> <!-- end of technologies -->
             <a href="#work" class="btn">My Work</a>
         </section>
 
         <!-- about me -->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about"></p>
+            <p class="section__subtitle section__subtitle--about">Becoming a software developer...</p>
             <div class="about-me__body">
-                <p></p>
+                <p>I was employed by Emirates Airline and have been for more than 12 years until I was made redundant in February 2021 due to the economic climate created by covid-19 virus.<br>
+                I took this as an opportunity for a change of career to software development as it is something that I always fancied to give a go but never took the leap. Since June, I have been taking part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a>. 
+                I graduated from the course since October 2021.<br>
+                I have been introduced to every aspect of full-stack development, from the fundamentals to the back end where we built our own servers, to the front end using React and deploying on Netlify. I’m now fully rehearsed in applying my newly acquired coding skills and seeking the opportunity to start my career in the front end to further develop my experience and skills in this sector.<br>
+                I continue to sharpen my skills on codecademy and freeCodeCamp, and try to learn as much as possible about React.</p>
             </div>
 
             <img src="picture/IMG_patioChilling.jpg" alt="Joel sitting in the gazebo" >
