editing on some content

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <nav class="nav" >
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#technologies" class="nav__link">Technologies</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="#project" class="nav__link">My Projects</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,59 +38,60 @@
 
         <!-- technologies -->
 
-        <section class="my-services" id="services">
-            <h2 class="my-services__title section__title--services" >What I do</h2>
+        <section class="my-services" id="technologies">
+            <h2 class="my-services__title section__title--services" >Technologies</h2>
             <div class="services">
                 <div class="service">
-                    <h3>Design + Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lacinia felis tincidunt molestie elementum. Morbi maximus dolor urna, ac tristique orci aliquet ut. Phasellus suscipit ex vel mauris scelerisque hendrerit. Cras erat ligula, porta at augue id, lobortis imperdiet velit. Morbi rutrum, libero et tempus vehicula, odio mauris efficitur leo, ut posuere nunc orci eu lorem. Suspendisse condimentum placerat mi eu molestie.</p>
+                    <h3>Front-End</h3>
+                    <p>React, Javascript, HTML, CSS, Axios, Netlify.</p>
                 </div> <!-- end of service -->
 
                 <div class="service">
-                    <h3>E-commerce</h3>
-                    <p>Praesent vulputate dignissim rhoncus. Ut sit amet euismod leo. Vivamus vehicula nulla tincidunt, varius mauris vitae, lacinia ex. Vivamus vehicula semper augue non volutpat. Nam dapibus, ex sed congue pretium, purus dolor porta massa, vel elementum dolor velit eget justo. Morbi porttitor vel mi quis lacinia. Nam dui mauris, vestibulum ut fermentum sed, efficitur vel nunc. Donec lobortis, libero a dapibus aliquet, tellus mi lobortis est, a venenatis justo purus condimentum lacus.</p>
+                    <h3>Back-End</h3>
+                    <p>Node.JS, Express,PostgreSQL, Javascript, Heroku.</p>
                 </div> <!-- end of service -->
 
                 <div class="service">
-                    <h3>Wordpress</h3>
-                    <p>Nulla enim leo, tempus eget placerat nec, consectetur a lorem. Curabitur sed lacus eget orci bibendum congue et eget nunc. Integer feugiat pulvinar eleifend. Nam finibus sapien nisi, vel accumsan tellus mattis in. Donec non orci vitae dolor fermentum venenatis quis in mauris. Aliquam eu nibh vitae nisl vestibulum porttitor. Nullam vel quam nec nisi malesuada mollis. Maecenas ac nulla ullamcorper, luctus lorem et.</p>
+                    <h3>Work Practices</h3>
+                    <p>Jest (testing), TDD, eslint, Husky, GitHub practices (CICD).</p>
                 </div> <!-- end of service -->
             </div> <!-- end of technologies -->
-            <a href="#work" class="btn">My Work</a>
+            <a href="#project" class="btn">My Projects</a>
         </section>
 
         <!-- about me -->
         <section class="about-me" id="about">
-            <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">Becoming a software developer...</p>
+            <h2 class="section__title section__title--about">About me</h2>
+            <p class="section__subtitle section__subtitle--about">Becoming a software developer</p>
             <div class="about-me__body">
-                <p>I was employed by Emirates Airline and have been for more than 12 years until I was made redundant in February 2021 due to the economic climate created by covid-19 virus.<br>
-                I took this as an opportunity for a change of career to software development as it is something that I always fancied to give a go but never took the leap. Since June, I have been taking part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a>. 
+                <p>I was employed by Emirates Airline and have been for more than 12 years until I was made redundant in February 2021 due to the economic climate created by covid-19 virus.</p>
+                <p>I took this as an opportunity for a change of career to software development as it is something that I always fancied to give a go but never took the leap. </p>
+                <p>Since June, I have been taking part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a>. 
                 I graduated from the course since October 2021.<br>
-                I have been introduced to every aspect of full-stack development, from the fundamentals to the back end where we built our own servers, to the front end using React and deploying on Netlify. I’m now fully rehearsed in applying my newly acquired coding skills and seeking the opportunity to start my career in the front end to further develop my experience and skills in this sector.<br>
-                I continue to sharpen my skills on codecademy and freeCodeCamp, and try to learn as much as possible about React.</p>
+                I have been introduced to every aspect of full-stack development, from the fundamentals to the back end where we built our own servers, to the front end using React and deploying on Netlify. I’m now fully rehearsed in applying my newly acquired coding skills and seeking the opportunity to start my career in the front end to further develop my experience and skills in this sector.</p>
+                <p>Since the end of the course, I continue to sharpen my skills on <a href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a> and <a href="https://www.freecodecamp.org/mr-joel">freeCodeCamp</a>, and try to learn as much as possible about React.</p>
             </div>
 
-            <img src="picture/IMG_patioChilling.jpg" alt="Joel sitting in the gazebo" >
+            <img class="about-me__img" src="picture/IMG_patioChilling.jpg" alt="Joel sitting in the gazebo" >
         </section>
 
         <!-- my projects -->
-        <section class="my-work" id="work" >
-            <h2 class="section__title" >My Work</h2>
+        <section class="my-work" id="project" >
+            <h2 class="section__title" >My Projects</h2>
             <p class="section__subtitle" ></p>
 
             <div class="portfolio">
                 <!--portfolio item 1-->
                 <a href="#" class="portfolio__item">
-                    <img src="picture/projects/project_01/IMG_gamers-parlour.jpg" alt="" class="portfolio__img">
+                    <img src="picture/projects/project_01/IMG_gamers-parlour.jpg" alt="Gamers Parlour Front-end screenshot" class="portfolio__img">
                 </a>
                 <!--portfolio item 2-->
                 <a href="#" class="portfolio__item">
-                    <img src="picture/projects/project_02/IMG_gamers-parlour-codeline.jpg" alt="" class="portfolio__img">
+                    <img src="picture/projects/project_02/IMG_gamers-parlour-codeline.jpg" alt="Gamers Parlour Back-end screenshot of some query" class="portfolio__img">
                 </a>
                 <!--portfolio item 3-->
                 <a href="#" class="portfolio__item">
-                    <img src="picture/projects/project_03/IMG_github-finder.png" alt="" class="portfolio__img">
+                    <img src="picture/projects/project_03/IMG_github-finder.png" alt="Github Finder screenshot" class="portfolio__img">
                 </a>
                 
             </div>
