first try at adding icons in footer from diferent origin

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Joel Meyer Porfolio Site</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha512-0S+nbAYis87iX26mmj/+fWt1MmaKCv80H+Mbo+Ne7ES4I6rxswpfnC6PxmLiw33Ywj2ghbtTw0FkLbMWqh4F7Q==" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro|Source+Sans+Pro&display=swap">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- <script src="https://kit.fontawesome.com/bb313dab40.js" crossorigin="anonymous"></script> -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&family=Source+Sans+Pro:wght@300&display=swap">
         <link rel="stylesheet" href="css/style.css" >
     </head>
     <body>
@@ -69,16 +71,16 @@
                 <p>Since June, I have been taking part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a>. 
                 I graduated from the course since October 2021.<br>
                 I have been introduced to every aspect of full-stack development, from the fundamentals to the back end where we built our own servers, to the front end using React and deploying on Netlify. I’m now fully rehearsed in applying my newly acquired coding skills and seeking the opportunity to start my career in the front end to further develop my experience and skills in this sector.</p>
-                <p>Since the end of the course, I continue to sharpen my skills on <a href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a> and <a href="https://www.freecodecamp.org/mr-joel">freeCodeCamp</a>, and try to learn as much as possible about React.</p>
+                <p>Since the end of the course, I continue to sharpen my skills on <a href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a>, <a href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864">CodinGame</a> and <a href="https://www.freecodecamp.org/mr-joel">freeCodeCamp</a>, and try to learn as much as possible about React or anything related to frontend development.</p>
             </div>
 
-            <img class="about-me__img" src="picture/IMG_patioChilling.jpg" alt="Joel sitting in the gazebo" >
+            <img class="about-me__img" src="picture/IMG_standing-in-sunset2.jpg" alt="Joel standing in sunset near Whitby coast" >
         </section>
 
         <!-- my projects -->
-        <section class="my-work" id="project" >
-            <h2 class="section__title" >My Projects</h2>
-            <p class="section__subtitle" ></p>
+        <section class="my-project" id="project" >
+            <h2 class="section__title section__title--project " >My Projects</h2>
+            <p class="section__subtitle section__subtitle--project" > A selection of my projects</p>
 
             <div class="portfolio">
                 <!--portfolio item 1-->
@@ -101,10 +103,21 @@
         <footer>
             <a href="mailto:meyerjoel01@gmail.com" class="footer-link">meyerjoel01@gmail.com</a>
             <ul class="social-list" >
-                <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/joel-meyer-b6a7a2b7/">LinkedIn</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://github.com/mr-joelM">GitHub</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://www.freecodecamp.org/mr-joel">freeCodeCamp</a></li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/joel-meyer-b6a7a2b7/"><i class="fa-brands fa-github"></i> LinkedIn</a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://github.com/mr-joelM"><i class="fa-brands fa-linkedin"></i> GitHub</a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864"><img class="icon" src="./picture/icons/codingame-1.svg" alt="*"> CodinGame</a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.freecodecamp.org/mr-joel"><img class="icon" src="./picture/icons/freecodecamp_icon.svg" alt="*"> FreeCodeCamp</a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.codecademy.com/profiles/mr-joelM"><img class="icon" src="./picture/icons/codecademy_icon.svg" alt="*"> Codecademy</a>
+                </li>
             </ul>
         </footer>
 
