more css over silly buttons and links lol

--- a/index.html
+++ b/index.html
@@ -100,23 +100,23 @@
         </section>
 
         <!-- footer -->
-        <footer>
-            <a href="mailto:meyerjoel01@gmail.com" class="footer-link">meyerjoel01@gmail.com</a>
+        <footer class="footer">
+            <a href="mailto:meyerjoel01@gmail.com" class="footer__link">meyerjoel01@gmail.com</a>
             <ul class="social-list" >
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://www.linkedin.com/in/joel-meyer-b6a7a2b7/"><i class="fa-brands fa-github"></i> LinkedIn</a>
+                    <a title="LinkedIn" class="social-list__link" href="https://www.linkedin.com/in/joel-meyer-b6a7a2b7/"><i class="fa-brands fa-linkedin"></i></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com/mr-joelM"><i class="fa-brands fa-linkedin"></i> GitHub</a>
+                    <a title="GitHub" class="social-list__link" href="https://github.com/mr-joelM"><i class="fa-brands fa-github"></i></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864"><img class="icon" src="./picture/icons/codingame-1.svg" alt="*"> CodinGame</a>
+                    <a title="CodinGame" class="social-list__link" href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864"><img class="icon icon-codingame" src="./picture/icons/codingame-1.svg" alt="*"></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://www.freecodecamp.org/mr-joel"><img class="icon" src="./picture/icons/freecodecamp_icon.svg" alt="*"> FreeCodeCamp</a>
+                    <a title="FreeCodeCamp" class="social-list__link" href="https://www.freecodecamp.org/mr-joel"><img class="icon icon-freecodecamp" src="./picture/icons/freecodecamp_icon.svg" alt="*"></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://www.codecademy.com/profiles/mr-joelM"><img class="icon" src="./picture/icons/codecademy_icon.svg" alt="*"> Codecademy</a>
+                    <a title="Codecademy" class="social-list__link" href="https://www.codecademy.com/profiles/mr-joelM"><img class="icon icon-codecademy" src="./picture/icons/codecademy_icon.svg" alt="*"></a>
                 </li>
             </ul>
         </footer>
