--- a/portfolio-item-04.html
+++ b/portfolio-item-04.html
@@ -30,13 +30,13 @@
         <!-- introduction -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                Hi, I am <strong>Joel Meyer</strong>
+                This is <strong>App Name</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+            <p class="section__subtitle section__subtitle--intro">Something</p>
             <img src="picture/IMG_joelM.jpg" alt="whatever is in the picture" class="intro__img">
         </section>
 
-        
+        <!-- THIS WHERE I WILL PUT THE STUFF WHEN IVE GOT MORE PROJECT -->
 
         <!-- footer -->
         <footer class="footer">
