--- a/portfolio-item-02.html
+++ b/portfolio-item-02.html
@@ -39,11 +39,11 @@
         <!-- content -->
         <div class="portfolio-item-individual">
             <p>This is the back-end of the Application Gamers Parlour. The API provide the information to the front end build on PSQL and deployed on Heroku.</p>
-            <img src="picture/projects/project_02/gamers-parlour-heroku.png" alt="screenshot showing some endpoints on heroku">
+            <img class="project-pic" src="picture/projects/project_02/gamers-parlour-heroku.png" alt="screenshot showing some endpoints on heroku">
             <p>this back-end was built using Express as a framework for Node.js and thoroughly tested using Jest.</p>
-            <img src="picture/projects/project_02/gamers-parlour-jest.png" alt="screenshot showing some test ran by Jest">
+            <img class="project-pic" src="picture/projects/project_02/gamers-parlour-jest.png" alt="screenshot showing some test ran by Jest">
             <p>For more informations, please visit the <a href="https://github.com/mr-joelM/gamers-parlour-backend#readme">GitHub Gamers Parlour Backend</a> public repo, this link will take you directly to the README.md where more details can be found regarding this project.</p>
-            <img src="picture/projects/project_02/gamers-parlour-BE-readme.png" alt="screenshot of the table of contents in the README">
+            <img class="project-pic" src="picture/projects/project_02/gamers-parlour-BE-readme.png" alt="screenshot of the table of contents in the README">
             
         </div>
 
