more portfolio building pages

--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
 
             <div class="portfolio">
                 <!--portfolio item 1-->
-                <a href="#" class="portfolio__item">
+                <a href="portfolio-item-01.html" class="portfolio__item">
                     <img src="picture/projects/project_01/IMG_gamers-parlour.jpg" alt="Gamers Parlour Front-end screenshot" class="portfolio__img">
                 </a>
                 <!--portfolio item 2-->
-                <a href="#" class="portfolio__item">
+                <a href="portfolio-item-02.html" class="portfolio__item">
                     <img src="picture/projects/project_02/IMG_gamers-parlour-codeline.jpg" alt="Gamers Parlour Back-end screenshot of some query" class="portfolio__img">
                 </a>
                 <!--portfolio item 3-->
-                <a href="#" class="portfolio__item">
+                <a href="portfolio-item-03.html" class="portfolio__item">
                     <img src="picture/projects/project_03/IMG_github-finder.png" alt="Github Finder screenshot" class="portfolio__img">
                 </a>
                 
