--- a/portfolio-item-01.html
+++ b/portfolio-item-01.html
@@ -19,24 +19,32 @@
             </button>
             <nav class="nav" >
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#technologies" class="nav__link">Technologies</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-                    <li class="nav__item"><a href="#project" class="nav__link">My Projects</a></li>
+                    <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="index.html#technologies" class="nav__link">Technologies</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About Me</a></li>
+                    <li class="nav__item"><a href="index.html#project" class="nav__link">My Projects</a></li>
                 </ul>
             </nav>
         </header>
 
         <!-- introduction -->
-        <section class="intro" id="home">
+        <section class="intro">
             <h1 class="section__title section__title--intro">
-                This is <strong>Gamers Parlour</strong>
+                Gamers <strong> Parlour</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Front-end</p>
+            <p class="section__subtitle section__subtitle--intro"> the Front-end</p>
             <img src="picture/projects/project_01/IMG_gamers-parlour.jpg" alt="Gamers Parlour Front-end screenshot" class="intro__img">
         </section>
 
-        
+        <!-- content -->
+        <div class="portfolio-item-individual">
+            <p>Gamers Parlour is a place for games reviews and comments rating, and a website which interacts with the backend API I created previously. This project is a React app built using JavaScript. Using Axios and Fetch to make API calls to my Gamers Parlour Backend API and React Router to render the app's different components. The app was created with JSX styled with CSS.</p>
+
+            <p>Deployed on <a href="https://gamers-parlour.netlify.app/">Netlify</a>, the app... </p>
+
+            <p>For more informations, please visit the <a href="https://github.com/mr-joelM/gamers-parlour-frontend#readme">GitHub Gamers Parlour Frontend</a> public repo, this link will take you directly to the README.md where more details can be found regarding this project.</p>
+            <img class="project-pic" src="picture/projects/project_01/gamers-parlour-FE-readme.png" alt="screenshot of the table of contents in the README">
+        </div>
 
         <!-- footer -->
         <footer class="footer">
