--- a/portfolio-item-02.html
+++ b/portfolio-item-02.html
@@ -29,10 +29,8 @@
 
         <!-- introduction -->
         <section class="intro">
-            <h1 class="section__title section__title--intro">
-                This is <strong>Gamers Parlour</strong>
-            </h1>
-            <p class="section__subtitle section__subtitle--intro">The Back-end</p>
+            <h1 class="section__title section__title--intro">Gamers <strong>Parlour</strong></h1>
+            <p class="section__subtitle section__subtitle--intro">the Back-end</p>
             <img src="picture/projects/project_02/IMG_gamers-parlour-codeline.jpg" alt="Gamers Parlour Back-end screenshot of some query" class="intro__img">
         </section>
 
