--- a/portfolio-item-03.html
+++ b/portfolio-item-03.html
@@ -19,16 +19,16 @@
             </button>
             <nav class="nav" >
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#technologies" class="nav__link">Technologies</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-                    <li class="nav__item"><a href="#project" class="nav__link">My Projects</a></li>
+                    <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="index.html#technologies" class="nav__link">Technologies</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About Me</a></li>
+                    <li class="nav__item"><a href="index.html#project" class="nav__link">My Projects</a></li>
                 </ul>
             </nav>
         </header>
 
         <!-- introduction -->
-        <section class="intro" id="home">
+        <section class="intro">
             <h1 class="section__title section__title--intro">
                 This is <strong>Github Finder</strong>
             </h1>
@@ -36,7 +36,13 @@
             <img src="picture/projects/project_03/IMG_github-finder.png" alt="Github Finder screenshot" class="intro__img">
         </section>
 
-        
+        <!-- content -->
+        <div class="portfolio-item-individual">
+            <p>some stuff explaining the app</p>
+            <img class="project-pic" src="" alt="">
+            <p>some more stuff</p>
+            <p>and probably some more there as well</p>
+        </div>
 
         <!-- footer -->
         <footer class="footer">
