portfolio project 01 done

--- a/portfolio-item-01.html
+++ b/portfolio-item-01.html
@@ -40,9 +40,41 @@
         <div class="portfolio-item-individual">
             <p>Gamers Parlour is a place for games reviews and comments rating, and a website which interacts with the backend API I created previously. This project is a React app built using JavaScript. Using Axios and Fetch to make API calls to my Gamers Parlour Backend API and React Router to render the app's different components. The app was created with JSX styled with CSS.</p>
 
-            <p>Deployed on <a href="https://gamers-parlour.netlify.app/">Netlify</a>, the app... </p>
+            <div id="slideshow">
+                <div>
+                  <img class="project-pic" src="picture/projects/project_01/gamers-parlour-FE-allReviews.png">
+                </div>
+                <!-- <div>
+                    <img src="picture/projects/project_01/gamers-parlour-FE-review.png">
+                </div> -->
+                <!-- <div>
+                    <img src="picture/projects/project_01/gamers-parlour-FE-cat.png">
+                </div> -->
+                <!-- <div>
+                    <img src="picture/projects/project_01/gamers-parlour-FE-com.png">
+                </div> -->
+                <!-- <div>
+                    <img src="picture/projects/project_01/gamers-parlour-FE-addcom.png">
+                </div> -->
+            </div>
+
+            <p><a href="https://gamers-parlour.netlify.app/">Deployed on Netlify</a>, the app can be navigated from all reviews to a more refined choice by categories. </p>
+
+
+            <div>
+                <img class="project-pic" src="picture/projects/project_01/gamers-parlour-FE-cat.png">
+            </div>
+
+            <p>
+                User can read the reviews and comments from other users, and also post his own comments regarding other users reviews. 
+            </p>
+
+            <div>
+                <img class="project-pic" src="picture/projects/project_01/gamers-parlour-FE-review.png">
+            </div>
 
             <p>For more informations, please visit the <a href="https://github.com/mr-joelM/gamers-parlour-frontend#readme">GitHub Gamers Parlour Frontend</a> public repo, this link will take you directly to the README.md where more details can be found regarding this project.</p>
+
             <img class="project-pic" src="picture/projects/project_01/gamers-parlour-FE-readme.png" alt="screenshot of the table of contents in the README">
         </div>
 
