--- a/portfolio-item-03.html
+++ b/portfolio-item-03.html
@@ -30,7 +30,7 @@
         <!-- introduction -->
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                This is <strong>Github Finder</strong>
+                Github <strong> Finder</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">React app</p>
             <img src="picture/projects/project_03/IMG_github-finder.png" alt="Github Finder screenshot" class="intro__img">
@@ -38,10 +38,14 @@
 
         <!-- content -->
         <div class="portfolio-item-individual">
-            <p>some stuff explaining the app</p>
+            <p>Github Finder is an application to find Github Users by name. This project is a React app built using JavaScript. Using Axios to make API calls to Github and React Router to render the app's different components. The app was created with CSS (that was provided as a folder in the course) and was an exercise to get introduced to useContext and useReducer. the course was made using react router v5 however since i installed the v6 version i had to modify and adapt the content.</p>
+            
             <img class="project-pic" src="" alt="">
-            <p>some more stuff</p>
-            <p>and probably some more there as well</p>
+
+            <p>For more informations, please visit the <a href="https://github.com/mr-joelM/github-finder#readme">GitHub Finder</a> public repo, this link will take you directly to the README.md where more details can be found regarding this project.</p>
+
+            <img class="project-pic" src="picture/projects/project_03/github-finder-readme.png" alt="screenshot of the table of contents in the README">
+        
         </div>
 
         <!-- footer -->
