more of template for futur ref

--- a/portfolio-item-04.html
+++ b/portfolio-item-04.html
@@ -41,7 +41,8 @@
             <p>some stuff explaining the app</p>
             <img src="" alt="">
             <p>some more stuff</p>
-            <p>and probably some more there as well</p>
+            <p>For more informations, please visit the <a href="https://github.com/mr-joelM">NAME of the APP</a> public repo, this link will take you directly to the README.md where more details can be found regarding this project.</p>
+
         </div>
 
         <!-- footer -->
