styling and fonts change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <title>Joel Meyer Porfolio Site</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- to "normalize" and not reset all the css of every browsers -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- for the icons -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400&family=Source+Sans+Pro:wght@400&display=swap"> <!-- for the typography -->
+        
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Source+Sans+Pro:wght@400;700&display=swap"> <!-- for the typography1  -->
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"> <!-- for the typography2 -->
         <link rel="stylesheet" href="css/style.css" >
     </head>
     <body>
@@ -67,12 +69,11 @@
             <h2 class="section__title section__title--about">About me</h2>
             <p class="section__subtitle section__subtitle--about">Becoming a software developer</p>
             <div class="about-me__body">
-                <p>I was employed by Emirates Airline and have been for more than 12 years until I was made redundant in February 2021 due to the economic climate created by covid-19 virus.</p>
+                <p>I was employed by Emirates Airline for over 12 years until I was made redundant due to the economic climate created by covid-19 virus.</p>
                 <p>I took this as an opportunity for a change of career to software development as it is something that I always fancied to give a go but never took the leap. </p>
-                <p>Since June, I have been taking part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a>. 
-                I graduated from the course since October 2021.<br>
+                <p>I have been taking part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a> from whom I graduated since.<br>
                 I have been introduced to every aspect of full-stack development, from the fundamentals to the back end where we built our own servers, to the front end using React and deploying on Netlify. I’m now fully rehearsed in applying my newly acquired coding skills and seeking the opportunity to start my career in the front end to further develop my experience and skills in this sector.</p>
-                <p>Since the end of the course, I continue to sharpen my skills on <a href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a>, <a href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864">CodinGame</a> and <a href="https://www.freecodecamp.org/mr-joel">freeCodeCamp</a>, and try to learn as much as possible about React or anything related to frontend development.</p>
+                <p>Since the end of the course, I continue to sharpen my skills on <a href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a>, <a href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864">CodinGame</a> and <a href="https://www.freecodecamp.org/mr-joel">FreeCodeCamp</a>, and try to learn as much as possible about React or anything related to frontend development.</p>
             </div>
 
             <img class="about-me__img" src="picture/IMG_standing-in-sunset2.jpg" alt="Joel standing in sunset near Whitby coast" >
